--- a/app/src/debug/res/values/strings.xml
+++ b/app/src/debug/res/values/strings.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name" translate="false">AntennaPod Debug</string>
+    <string name="app_name" translate="false">ApexPod Debug</string>
 </resources>
