--- a/core/src/main/res/values-ca/strings.xml
+++ b/core/src/main/res/values-ca/strings.xml
@@ -284,7 +284,7 @@
   <string name="playback_error_unknown">Error desconegut</string>
   <string name="no_media_playing_label">No s\'està reproduint res</string>
   <string name="player_go_to_picture_in_picture">Mode Picture-in-picture</string>
-  <string name="unknown_media_key">AntennaPod - Control desconegut: %1$d</string>
+  <string name="unknown_media_key">ApexPod - Control desconegut: %1$d</string>
   <string name="error_file_not_found">Arxiu no trobat</string>
   <string name="no_media_label">L\'element no conté cap fitxer multimèdia</string>
   <!--Queue operations-->
@@ -405,7 +405,7 @@
   <string name="pref_nav_drawer_feed_order_sum">Canvia l\'ordre de les subscripcions</string>
   <string name="pref_nav_drawer_feed_counter_title">Estableix el comptador de les subscripcions</string>
   <string name="pref_nav_drawer_feed_counter_sum">Canvia la informació mostrada pel comptador de les subscripcions. També afecta l\'ordre de les subscripcions si a l\'opció \'Ordre de les subscripcions\' s\'ha indicat \'Comptador\'.</string>
-  <string name="pref_set_theme_sum">Canvieu l\'aparença d\'AntennaPod.</string>
+  <string name="pref_set_theme_sum">Canvieu l\'aparença d\'ApexPod.</string>
   <string name="pref_automatic_download_title">Baixada automàtica</string>
   <string name="pref_automatic_download_sum">Configureu la baixada automàtica d\'episodis.</string>
   <string name="pref_autodl_wifi_filter_title">Activa el filtre de la xarxa sense fils</string>
@@ -479,7 +479,7 @@
   <string name="pref_no_browser_found">No s\'ha trobat cap navegador web.</string>
   <string name="pref_cast_title">Suport per a Chromecast</string>
   <string name="pref_cast_message_play_flavor">Habilita el suport per la reproducció remota en dispositius de difusió (com ara Chromecast, Audio Speakers o Android TV). </string>
-  <string name="pref_cast_message_free_flavor" tools:ignore="UnusedResources">Chromecast requereix de llibreries propietàries de terceres parts que estan inhabilitades en aquesta versió d\'AntennaPod</string>
+  <string name="pref_cast_message_free_flavor" tools:ignore="UnusedResources">Chromecast requereix de llibreries propietàries de terceres parts que estan inhabilitades en aquesta versió d\'ApexPod</string>
   <string name="pref_enqueue_downloaded_title">Afegeix les baixades a la cua</string>
   <string name="pref_enqueue_downloaded_summary">Afegeix els episodis descarregats a la cua</string>
   <string name="media_player_builtin">Reproductor Android integrat (obsolet)</string>
@@ -499,7 +499,7 @@
   <string name="back_button_open_drawer">Obri el calaix de navegació</string>
   <string name="back_button_double_tap">Doble toc per a eixir</string>
   <string name="back_button_show_prompt">Confema per a eixir</string>
-  <string name="close_prompt">Estàs segur que vols tancar AntennaPod?</string>
+  <string name="close_prompt">Estàs segur que vols tancar ApexPod?</string>
   <string name="double_tap_toast">Toca el botó \"endarrere\" un altra vegada per a eixir</string>
   <string name="back_button_go_to_page">Ves a la pàgina...</string>
   <string name="back_button_go_to_page_title">Selecciona pàgina</string>
@@ -519,15 +519,15 @@
   <string name="pref_contribute">Contribueix</string>
   <!--About screen-->
   <string name="about_pref">Quant a</string>
-  <string name="antennapod_version">Versió d\'AntennaPod</string>
+  <string name="antennapod_version">Versió d\'ApexPod</string>
   <string name="contributors">Contributors</string>
-  <string name="contributors_summary">Tothom pot ajudar a fer AntennaPod millor - amb codi, traduccions o ajudant als usuaris al nostre fòrum</string>
+  <string name="contributors_summary">Tothom pot ajudar a fer ApexPod millor - amb codi, traduccions o ajudant als usuaris al nostre fòrum</string>
   <string name="developers">Desenvolupadors</string>
   <string name="translators">Traductors</string>
   <string name="special_thanks">Agraïments especials</string>
   <string name="privacy_policy">Política de privacitat</string>
   <string name="licenses">Llicències</string>
-  <string name="licenses_summary">AntennaPod usa altre programati genial</string>
+  <string name="licenses_summary">ApexPod usa altre programati genial</string>
   <!--Search-->
   <string name="search_status_no_results">No s\'ha trobat cap resultat</string>
   <string name="type_to_search">Escriu una consulta per buscar</string>
@@ -549,8 +549,8 @@
   <string name="html_export_summary">Mostra les teues subscripcions a un amic</string>
   <string name="opml_export_summary">Transfereix les teues subscripcions a un altra aplicació de podcast</string>
   <string name="opml_import_summary">Importa les teues subscripcions des d\'un altra aplicació de podcast</string>
-  <string name="database_export_summary">Transfereix subscripcions i cola a AntennaPod en un altre dispositiu</string>
-  <string name="database_import_summary">Importa base de dades d\'AntennaPod des d\'un altre dispositiu</string>
+  <string name="database_export_summary">Transfereix subscripcions i cola a ApexPod en un altre dispositiu</string>
+  <string name="database_import_summary">Importa base de dades d\'ApexPod des d\'un altre dispositiu</string>
   <string name="opml_import_label">Importació d\'OPML</string>
   <string name="opml_add_podcast_label">Importa llista de podcasts (OPML)</string>
   <string name="opml_reader_error">S\'ha produït un error en llegir el document OPML: </string>
@@ -569,8 +569,8 @@
   <string name="opml_import_ask_read_permission">Per llegir arxius OPML és necessari accés a la memòria externa</string>
   <string name="import_select_file">Tria un fitxer per a importar</string>
   <string name="successful_import_label">Importació correcta</string>
-  <string name="import_ok">Si us plau, premeu D\'acord per reiniciar AntennaPod</string>
-  <string name="import_no_downgrade">Aquesta base de dades va ser exportada amb una versió més nova d\'AntennaPod. La versió que tens ara mateixa no sap com processar-la.</string>
+  <string name="import_ok">Si us plau, premeu D\'acord per reiniciar ApexPod</string>
+  <string name="import_no_downgrade">Aquesta base de dades va ser exportada amb una versió més nova d\'ApexPod. La versió que tens ara mateixa no sap com processar-la.</string>
   <string name="favorites_export_label">Exportar preferits</string>
   <string name="favorites_export_summary">Exportar episodis favorits a un arxiu</string>
   <!--Sleep timer-->
@@ -607,16 +607,16 @@
   <string name="create_account">Crear un compte</string>
   <string name="username_label">Nom d\'usuari</string>
   <string name="password_label">Contrasenya</string>
-  <string name="gpodnet_description">Gpodder.net és un servei de sincronització de podcasts de codi obert que és independent del projecte AntennaPod.</string>
+  <string name="gpodnet_description">Gpodder.net és un servei de sincronització de podcasts de codi obert que és independent del projecte ApexPod.</string>
   <string name="gpodnetauth_server_official">Servidor oficial de gpodder.net</string>
   <string name="gpodnetauth_server_custom">Servidor personalitzat</string>
   <string name="gpodnetauth_host">Nom del servidor</string>
   <string name="gpodnetauth_select_server">Selecciona servidor</string>
   <string name="gpodnetauth_device_name">Nom del dispositiu</string>
-  <string name="gpodnetauth_device_name_default">AntennaPod a %1$s</string>
+  <string name="gpodnetauth_device_name_default">ApexPod a %1$s</string>
   <string name="gpodnetauth_existing_devices">Dispositius existents</string>
   <string name="gpodnetauth_create_device">Crea dispositiu</string>
-  <string name="gpodnetauth_finish_descr">Felicitats! El vostre compte de gpodder.net s\'ha enllaçat amb el dispositiu. D\'ara endavant, AntennaPod sincronitzarà automàticament les subscripcions del dispositiu al vostre compte.</string>
+  <string name="gpodnetauth_finish_descr">Felicitats! El vostre compte de gpodder.net s\'ha enllaçat amb el dispositiu. D\'ara endavant, ApexPod sincronitzarà automàticament les subscripcions del dispositiu al vostre compte.</string>
   <string name="gpodnetauth_finish_butsyncnow">Sincronitza ara</string>
   <string name="gpodnetsync_error_title">Error de sincronització a gpodder.net</string>
   <string name="gpodnetsync_error_descr">S\'ha produït un error durant la sincronització:\u0020</string>
@@ -625,13 +625,13 @@
   <string name="gpodnetsync_username_characters_error">Noms d\'usuari sols poden contindre lletres, dígits, guions i guions baixos. </string>
   <!--Directory chooser-->
   <string name="choose_data_directory">Selecció de la carpeta de dades</string>
-  <string name="choose_data_directory_message">Selecciona l\'arrel del teu directori d\'informació. AntennaPod crearà els subdirectoris pertinents</string>
+  <string name="choose_data_directory_message">Selecciona l\'arrel del teu directori d\'informació. ApexPod crearà els subdirectoris pertinents</string>
   <string name="choose_data_directory_available_space">%1$s de %2$s lliures</string>
   <string name="pref_pausePlaybackForFocusLoss_sum">Pausa la reproducció en lloc de baixar el volum quan una altra app necessiti reproduir sons</string>
   <string name="pref_pausePlaybackForFocusLoss_title">Pausa en interrompre</string>
   <string name="pref_resumeAfterCall_sum">Reprén la reproducció després d\'una trucada telefònica</string>
   <string name="pref_resumeAfterCall_title">Reprén després d\'una trucada</string>
-  <string name="pref_restart_required">AntennaPod s\'ha de reiniciar perquè aquest canvi tingui efecte.</string>
+  <string name="pref_restart_required">ApexPod s\'ha de reiniciar perquè aquest canvi tingui efecte.</string>
   <!--Online feed view-->
   <string name="subscribe_label">Subscriu</string>
   <string name="subscribing_label">Subscrivint...</string>
@@ -666,12 +666,12 @@
   <string name="episode_filters_hint">Una paraula \n\"Diverses paraules\"</string>
   <string name="keep_updated">Manté actualitzat</string>
   <string name="keep_updated_summary">Incloure aquest podcast quan (auto-)actualitzen tots els podcasts</string>
-  <string name="auto_download_disabled_globally">La baixada automàtica està deshabilitada als ajustos generals d\'AntennaPod</string>
+  <string name="auto_download_disabled_globally">La baixada automàtica està deshabilitada als ajustos generals d\'ApexPod</string>
   <string name="statistics_listened_for">Escoltat durant:</string>
   <string name="statistics_episodes_on_device">Episodis al dispositiu:</string>
   <string name="statistics_space_used">Espai utilitzat:</string>
   <string name="statistics_view_all">Veure per tots els podcasts »</string>
-  <!--AntennaPodSP-->
+  <!--ApexPodSP-->
   <string name="sp_apps_importing_feeds_msg">S\'estan important les subscripcions des de les apps de propòsit únic...</string>
   <!--Add podcast fragment-->
   <string name="search_podcast_hint">Cerca podcast…</string>
@@ -692,7 +692,7 @@
   <string name="local_folder">Carpeta local</string>
   <string name="reconnect_local_folder">Torna a connectar la carpeta local</string>
   <string name="reconnect_local_folder_warning">En cas de denegació de permisos, pots utilitzar-ho per tornar a connectar a la mateixa carpeta. No seleccionis cap altra carpeta.</string>
-  <string name="local_feed_description">Aquest podcast virtual es va crear afegint una carpeta a AntennaPod.</string>
+  <string name="local_feed_description">Aquest podcast virtual es va crear afegint una carpeta a ApexPod.</string>
   <string name="unable_to_start_system_file_manager">No es pot iniciar el gestor de fitxers del sistema</string>
   <string name="filter">Filtra</string>
   <string name="hide_is_favorite_label">És preferint</string>
@@ -721,8 +721,8 @@
   <string name="sort_short_long">Curt \u2192 Llarg</string>
   <string name="sort_long_short">Llarg \u2192 Curt</string>
   <!--Rating dialog-->
-  <string name="rating_title" tools:ignore="UnusedResources">T\'agrada AntennaPod?</string>
-  <string name="rating_message" tools:ignore="UnusedResources">Apreciaríem que et prenguessis un temps per valorar AntennaPod</string>
+  <string name="rating_title" tools:ignore="UnusedResources">T\'agrada ApexPod?</string>
+  <string name="rating_message" tools:ignore="UnusedResources">Apreciaríem que et prenguessis un temps per valorar ApexPod</string>
   <string name="rating_never_label" tools:ignore="UnusedResources">Deixa\'m tranquil</string>
   <string name="rating_later_label" tools:ignore="UnusedResources">Pregunta\'m més tard</string>
   <string name="rating_now_label" tools:ignore="UnusedResources">I tant, fem-ho!</string>
