--- a/core/src/main/res/values-de/strings.xml
+++ b/core/src/main/res/values-de/strings.xml
@@ -285,7 +285,7 @@ Tippen, um Details anzuzeigen.</string>
   <string name="playback_error_unknown">Unbekannter Fehler</string>
   <string name="no_media_playing_label">Keine Medienwiedergabe</string>
   <string name="player_go_to_picture_in_picture">Bild-in-Bild-Modus</string>
-  <string name="unknown_media_key">AntennaPod - Unbekannte Medientaste: %1$d</string>
+  <string name="unknown_media_key">ApexPod - Unbekannte Medientaste: %1$d</string>
   <string name="error_file_not_found">Datei nicht gefunden</string>
   <string name="no_media_label">Element enthält keine Mediendatei</string>
   <!--Queue operations-->
@@ -406,7 +406,7 @@ Tippen, um Details anzuzeigen.</string>
   <string name="pref_nav_drawer_feed_order_sum">Ändere die Reihenfolge deiner Abonnements</string>
   <string name="pref_nav_drawer_feed_counter_title">Abonnement-Zähler einstellen</string>
   <string name="pref_nav_drawer_feed_counter_sum">Ändere die durch den Abonnementszähler angezeigten Informationen. Betrifft auch die Sortierung der Abonnements wenn \"Reihenfolge der Abonnements\" auf \"Zähler\" gesetzt ist.</string>
-  <string name="pref_set_theme_sum">Ändere das Aussehen von AntennaPod.</string>
+  <string name="pref_set_theme_sum">Ändere das Aussehen von ApexPod.</string>
   <string name="pref_automatic_download_title">Automatisches Herunterladen</string>
   <string name="pref_automatic_download_sum">Konfiguriere das automatische Herunterladen von Episoden.</string>
   <string name="pref_autodl_wifi_filter_title">W-LAN-Filter aktivieren</string>
@@ -480,7 +480,7 @@ Tippen, um Details anzuzeigen.</string>
   <string name="pref_no_browser_found">Kein Browser gefunden.</string>
   <string name="pref_cast_title">Chromecast-Unterstützung</string>
   <string name="pref_cast_message_play_flavor">Aktiviere die Unterstützung von Cast-Geräten (Chromecast, Lautsprecher oder Android TV) zum entfernten Abspielen</string>
-  <string name="pref_cast_message_free_flavor" tools:ignore="UnusedResources">Chromecast benötigt proprietäre Bibliotheken von Drittanbietern, die in dieser Version von AntennaPod deaktiviert sind</string>
+  <string name="pref_cast_message_free_flavor" tools:ignore="UnusedResources">Chromecast benötigt proprietäre Bibliotheken von Drittanbietern, die in dieser Version von ApexPod deaktiviert sind</string>
   <string name="pref_enqueue_downloaded_title">Downloads einreihen</string>
   <string name="pref_enqueue_downloaded_summary">Füge heruntergeladene Episoden zur Warteschlange hinzu</string>
   <string name="media_player_builtin">Integrierter Android Player (veraltet) </string>
@@ -500,7 +500,7 @@ Tippen, um Details anzuzeigen.</string>
   <string name="back_button_open_drawer">Öffne Seitenleiste</string>
   <string name="back_button_double_tap">Doppelt tippen zum Verlassen</string>
   <string name="back_button_show_prompt">Bestätigen zum Verlassen</string>
-  <string name="close_prompt">Bist du sicher, dass du AntennaPod schließen möchtest?</string>
+  <string name="close_prompt">Bist du sicher, dass du ApexPod schließen möchtest?</string>
   <string name="double_tap_toast">Zurück-Button erneut tippen zum Verlassen</string>
   <string name="back_button_go_to_page">Gehe zu Seite…</string>
   <string name="back_button_go_to_page_title">Seite auswählen</string>
@@ -520,15 +520,15 @@ Tippen, um Details anzuzeigen.</string>
   <string name="pref_contribute">Mitwirken</string>
   <!--About screen-->
   <string name="about_pref">Über</string>
-  <string name="antennapod_version">AntennaPod-Version</string>
+  <string name="antennapod_version">ApexPod-Version</string>
   <string name="contributors">Beitragende</string>
-  <string name="contributors_summary">Jeder kann helfen, AntennaPod besser zu machen - durch Code, Übersetzungen oder durch Unterstützen anderer Nutzer in unserem Forum.</string>
+  <string name="contributors_summary">Jeder kann helfen, ApexPod besser zu machen - durch Code, Übersetzungen oder durch Unterstützen anderer Nutzer in unserem Forum.</string>
   <string name="developers">Entwickler</string>
   <string name="translators">Übersetzer</string>
   <string name="special_thanks">Besonderen Dank</string>
   <string name="privacy_policy">Datenschutzrichtlinie</string>
   <string name="licenses">Lizenzen</string>
-  <string name="licenses_summary">AntennaPod verwendet nützliche andere Software</string>
+  <string name="licenses_summary">ApexPod verwendet nützliche andere Software</string>
   <!--Search-->
   <string name="search_status_no_results">Keine Ergebnisse gefunden</string>
   <string name="type_to_search">Geben Sie eine Suchanfrage ein</string>
@@ -550,8 +550,8 @@ Tippen, um Details anzuzeigen.</string>
   <string name="html_export_summary">Abonnements mit deinen Freunden teilen</string>
   <string name="opml_export_summary">Deine Abonnements auf eine andere Podcast-App übertragen</string>
   <string name="opml_import_summary">Deine Abonnements von einer anderen Podcast-App importieren</string>
-  <string name="database_export_summary">Deine Abonnements, gehörte Episoden und die Warteschlange auf AntennaPod auf einem anderen Gerät übertragen</string>
-  <string name="database_import_summary">AntennaPod-Datenbank von einem anderen Gerät importieren</string>
+  <string name="database_export_summary">Deine Abonnements, gehörte Episoden und die Warteschlange auf ApexPod auf einem anderen Gerät übertragen</string>
+  <string name="database_import_summary">ApexPod-Datenbank von einem anderen Gerät importieren</string>
   <string name="opml_import_label">OPML Import</string>
   <string name="opml_add_podcast_label">Podcast-Liste importieren (OPML)</string>
   <string name="opml_reader_error">Beim Einlesen der OPML-Datei ist ein Fehler aufgetreten:</string>
@@ -570,8 +570,8 @@ Tippen, um Details anzuzeigen.</string>
   <string name="opml_import_ask_read_permission">Zugriff auf externen Speicher wird benötigt, um die OPML Datei zu lesen</string>
   <string name="import_select_file">Zu importierende Datei auswählen</string>
   <string name="successful_import_label">Import erfolgreich</string>
-  <string name="import_ok">Bitte drücken Sie OK, um AntennaPod neu zu starten.</string>
-  <string name="import_no_downgrade">Diese Datenbank wurde mit einer neueren Version von AntennaPod exportiert. Deine im Moment installierte Version kann die Datei leider nicht bearbeiten.</string>
+  <string name="import_ok">Bitte drücken Sie OK, um ApexPod neu zu starten.</string>
+  <string name="import_no_downgrade">Diese Datenbank wurde mit einer neueren Version von ApexPod exportiert. Deine im Moment installierte Version kann die Datei leider nicht bearbeiten.</string>
   <string name="favorites_export_label">Favoriten exportieren</string>
   <string name="favorites_export_summary">Speichere Favoriten in einer Datei</string>
   <!--Sleep timer-->
@@ -608,16 +608,16 @@ Tippen, um Details anzuzeigen.</string>
   <string name="create_account">Konto anlegen</string>
   <string name="username_label">Benutzername</string>
   <string name="password_label">Passwort</string>
-  <string name="gpodnet_description">Gpodder.net ist ein Open-Source-Dienst zur Synchronisation von Podcasts und unabhängig vom AntennaPod-Projekt.</string>
+  <string name="gpodnet_description">Gpodder.net ist ein Open-Source-Dienst zur Synchronisation von Podcasts und unabhängig vom ApexPod-Projekt.</string>
   <string name="gpodnetauth_server_official">Offizieller Server gpodder.net</string>
   <string name="gpodnetauth_server_custom">Anderer Server</string>
   <string name="gpodnetauth_host">Hostname</string>
   <string name="gpodnetauth_select_server">Server auswählen</string>
   <string name="gpodnetauth_device_name">Gerätename</string>
-  <string name="gpodnetauth_device_name_default">AntennaPod auf %1$s</string>
+  <string name="gpodnetauth_device_name_default">ApexPod auf %1$s</string>
   <string name="gpodnetauth_existing_devices">Bestehende Geräte</string>
   <string name="gpodnetauth_create_device">Gerät anlegen</string>
-  <string name="gpodnetauth_finish_descr">Glückwunsch! Dein gpodder.net Profil ist jetzt mit deinem Gerät verbunden. Von nun an wird AntennaPod automatisch deine Abonnements mit deinem gpodder.net Profil synchronisieren.</string>
+  <string name="gpodnetauth_finish_descr">Glückwunsch! Dein gpodder.net Profil ist jetzt mit deinem Gerät verbunden. Von nun an wird ApexPod automatisch deine Abonnements mit deinem gpodder.net Profil synchronisieren.</string>
   <string name="gpodnetauth_finish_butsyncnow">Jetzt synchronisieren</string>
   <string name="gpodnetsync_error_title">gpodder.net Synchronisierungsfehler</string>
   <string name="gpodnetsync_error_descr">Ein Fehler ist beim Synchronisieren aufgetreten:\u0020</string>
@@ -626,13 +626,13 @@ Tippen, um Details anzuzeigen.</string>
   <string name="gpodnetsync_username_characters_error">Benutzernamen dürfen nur Buchstaben, Zahlen, Bindestriche und Unterstriche enthalten.</string>
   <!--Directory chooser-->
   <string name="choose_data_directory">Datenordner auswählen</string>
-  <string name="choose_data_directory_message">Bitte wähle eine Basis für deinen Datenordner. AntennaPod erstellt automatisch die richtigen Unterverzeichnisse.</string>
+  <string name="choose_data_directory_message">Bitte wähle eine Basis für deinen Datenordner. ApexPod erstellt automatisch die richtigen Unterverzeichnisse.</string>
   <string name="choose_data_directory_available_space">%1$s von %2$s frei</string>
   <string name="pref_pausePlaybackForFocusLoss_sum">Wiedergabe pausieren statt die Lautstärke zu reduzieren, wenn eine andere Anwendung Töne abspielt</string>
   <string name="pref_pausePlaybackForFocusLoss_title">Bei Unterbrechungen pausieren</string>
   <string name="pref_resumeAfterCall_sum">Wiedergabe fortsetzen, wenn Anruf beendet ist</string>
   <string name="pref_resumeAfterCall_title">Nach Anruf fortsetzen</string>
-  <string name="pref_restart_required">AntennaPod muss neu gestartet werden, damit die Änderungen wirksam werden.</string>
+  <string name="pref_restart_required">ApexPod muss neu gestartet werden, damit die Änderungen wirksam werden.</string>
   <!--Online feed view-->
   <string name="subscribe_label">Abonnieren</string>
   <string name="subscribing_label">Abonniere…</string>
@@ -672,7 +672,7 @@ Tippen, um Details anzuzeigen.</string>
   <string name="statistics_episodes_on_device">Episoden auf dem Gerät:</string>
   <string name="statistics_space_used">Verwendeter Speicherplatz:</string>
   <string name="statistics_view_all">Für alle Podcasts ansehen »</string>
-  <!--AntennaPodSP-->
+  <!--ApexPodSP-->
   <string name="sp_apps_importing_feeds_msg">Importiere Abonnements aus Single-Purpose Apps</string>
   <!--Add podcast fragment-->
   <string name="search_podcast_hint">Podcast suchen…</string>
@@ -722,8 +722,8 @@ Tippen, um Details anzuzeigen.</string>
   <string name="sort_short_long">Kurz \u2192 Lang</string>
   <string name="sort_long_short">Lang \u2192 Kurz</string>
   <!--Rating dialog-->
-  <string name="rating_title" tools:ignore="UnusedResources">Gefällt dir AntennaPod?</string>
-  <string name="rating_message" tools:ignore="UnusedResources">Wir würden uns freuen, wenn du dir kurz die Zeit nimmst, AntennaPod zu bewerten.</string>
+  <string name="rating_title" tools:ignore="UnusedResources">Gefällt dir ApexPod?</string>
+  <string name="rating_message" tools:ignore="UnusedResources">Wir würden uns freuen, wenn du dir kurz die Zeit nimmst, ApexPod zu bewerten.</string>
   <string name="rating_never_label" tools:ignore="UnusedResources">Lass mich in Ruhe</string>
   <string name="rating_later_label" tools:ignore="UnusedResources">Erinnere mich später</string>
   <string name="rating_now_label" tools:ignore="UnusedResources">Sicher, los geht\'s!</string>
