--- a/core/src/main/res/values-hu/strings.xml
+++ b/core/src/main/res/values-hu/strings.xml
@@ -284,7 +284,7 @@
   <string name="playback_error_unknown">Ismeretlen hiba</string>
   <string name="no_media_playing_label">Nincs médialejátszás</string>
   <string name="player_go_to_picture_in_picture">Kép a képben mód</string>
-  <string name="unknown_media_key">AntennaPod – Ismeretlen médiabillentyű: %1$d</string>
+  <string name="unknown_media_key">ApexPod – Ismeretlen médiabillentyű: %1$d</string>
   <string name="error_file_not_found">A fájl nem található</string>
   <string name="no_media_label">Az elem nem tartalmaz médiafájlt</string>
   <!--Queue operations-->
@@ -405,7 +405,7 @@
   <string name="pref_nav_drawer_feed_order_sum">A feliratkozásai sorrendjének módosítása</string>
   <string name="pref_nav_drawer_feed_counter_title">Feliratkozásszámláló beállítása</string>
   <string name="pref_nav_drawer_feed_counter_sum">Módosítja a feliratkozásszámlálóban megjelenített információt. A feliratkozások sorrendjére is hatással van, ha a „Feliratkozási sorrend” a „Számláló” értékre van állítva.</string>
-  <string name="pref_set_theme_sum">AntennaPod kinézetének módosítása.</string>
+  <string name="pref_set_theme_sum">ApexPod kinézetének módosítása.</string>
   <string name="pref_automatic_download_title">Automatikus letöltés</string>
   <string name="pref_automatic_download_sum">Az epizódok automatikus letöltésének beállítása.</string>
   <string name="pref_autodl_wifi_filter_title">Wi-Fi szűrő engedélyezése</string>
@@ -479,7 +479,7 @@
   <string name="pref_no_browser_found">Nem található webböngésző.</string>
   <string name="pref_cast_title">Chromecast támogatás</string>
   <string name="pref_cast_message_play_flavor">A távoli médialejátszás engedélyezése a Cast eszközökön (mint a Chromecast, hangfalak vagy Android TV)</string>
-  <string name="pref_cast_message_free_flavor" tools:ignore="UnusedResources">A Chromecast harmadik féltől származó zárt programkönyvtárakat igényel, amelyek le vannak tiltva az AntennaPod jelen verziójában.</string>
+  <string name="pref_cast_message_free_flavor" tools:ignore="UnusedResources">A Chromecast harmadik féltől származó zárt programkönyvtárakat igényel, amelyek le vannak tiltva az ApexPod jelen verziójában.</string>
   <string name="pref_enqueue_downloaded_title">Letöltött elemek sorbaállítása</string>
   <string name="pref_enqueue_downloaded_summary">Letöltött epizódok sorhoz adása</string>
   <string name="media_player_builtin">Beépített androidos lejátszó (elavult)</string>
@@ -499,7 +499,7 @@
   <string name="back_button_open_drawer">Navigációs fiók megnyitása</string>
   <string name="back_button_double_tap">Dupla koppintás a kilépéshez</string>
   <string name="back_button_show_prompt">Megerősítés a kilépéshez</string>
-  <string name="close_prompt">Biztos, hogy bezárja az AntennaPodot?</string>
+  <string name="close_prompt">Biztos, hogy bezárja az ApexPodot?</string>
   <string name="double_tap_toast">A kilépéshez érintse meg újra a vissza gombot</string>
   <string name="back_button_go_to_page">Ugrás a laphoz…</string>
   <string name="back_button_go_to_page_title">Válasszon lapot</string>
@@ -519,15 +519,15 @@
   <string name="pref_contribute">Közreműködés</string>
   <!--About screen-->
   <string name="about_pref">Névjegy</string>
-  <string name="antennapod_version">AntennaPod verzió</string>
+  <string name="antennapod_version">ApexPod verzió</string>
   <string name="contributors">Közreműködők</string>
-  <string name="contributors_summary">Mindenki, aki segített az AntennaPod még jobbá tételében – kóddal, fordítással vagy a felhasználók segítésével a fórumon.</string>
+  <string name="contributors_summary">Mindenki, aki segített az ApexPod még jobbá tételében – kóddal, fordítással vagy a felhasználók segítésével a fórumon.</string>
   <string name="developers">Fejlesztők</string>
   <string name="translators">Fordítók</string>
   <string name="special_thanks">Külön köszönet</string>
   <string name="privacy_policy">Adatvédelmi nyilatkozat</string>
   <string name="licenses">Licencek</string>
-  <string name="licenses_summary">Az AntennaPod más remek szoftvereket használ</string>
+  <string name="licenses_summary">Az ApexPod más remek szoftvereket használ</string>
   <!--Search-->
   <string name="search_status_no_results">Nincsenek találatok</string>
   <string name="type_to_search">Írjon ide a kereséshez</string>
@@ -549,8 +549,8 @@
   <string name="html_export_summary">Feliratkozások megjelenítése egy barát számára</string>
   <string name="opml_export_summary">A feliratkozásai átküldése egy másik podcast alkalmazásnak</string>
   <string name="opml_import_summary">Feliratkozások importálása egy másik podcast alkalmazásból</string>
-  <string name="database_export_summary">Feliratkozások, meghallgatott epizódok és a lejátszási sor átküldése egy másik eszközök lévő AntennaPodnak</string>
-  <string name="database_import_summary">AntennaPod adatbázis importálása egy másik eszközről</string>
+  <string name="database_export_summary">Feliratkozások, meghallgatott epizódok és a lejátszási sor átküldése egy másik eszközök lévő ApexPodnak</string>
+  <string name="database_import_summary">ApexPod adatbázis importálása egy másik eszközről</string>
   <string name="opml_import_label">OPML importálása</string>
   <string name="opml_add_podcast_label">Postcastlista (OPML) importálása</string>
   <string name="opml_reader_error">Hiba történt az OPML-dokumentum olvasásakor:</string>
@@ -569,8 +569,8 @@
   <string name="opml_import_ask_read_permission">A külső tároló elérése szükséges az OPML fájl olvasásához</string>
   <string name="import_select_file">Importálandó fájl kiválasztása</string>
   <string name="successful_import_label">Importálás sikeres</string>
-  <string name="import_ok">Nyomja meg az OK gombot az AntennaPod újraindításához</string>
-  <string name="import_no_downgrade">Az adatbázis az AntennaPod egy újabb verziójából lett exportálva. A jelenlegi telepítése még nem tudja, hogyan kezelje ezt a fájlt.</string>
+  <string name="import_ok">Nyomja meg az OK gombot az ApexPod újraindításához</string>
+  <string name="import_no_downgrade">Az adatbázis az ApexPod egy újabb verziójából lett exportálva. A jelenlegi telepítése még nem tudja, hogyan kezelje ezt a fájlt.</string>
   <string name="favorites_export_label">Kedvencek exportálása</string>
   <string name="favorites_export_summary">Mentett kedvencek fájlba exportálása</string>
   <!--Sleep timer-->
@@ -607,16 +607,16 @@
   <string name="create_account">Fiók létrehozása</string>
   <string name="username_label">Felhasználónév</string>
   <string name="password_label">Jelszó</string>
-  <string name="gpodnet_description">A gpodder.net egy nyílt forráskódú podcast szinkronizációs szolgáltatás, amely független az AntennaPod projekttől.</string>
+  <string name="gpodnet_description">A gpodder.net egy nyílt forráskódú podcast szinkronizációs szolgáltatás, amely független az ApexPod projekttől.</string>
   <string name="gpodnetauth_server_official">Hivatalos gpodder.net kiszolgáló</string>
   <string name="gpodnetauth_server_custom">Egyéni kiszolgáló</string>
   <string name="gpodnetauth_host">Kiszolgálónév</string>
   <string name="gpodnetauth_select_server">Kiszolgáló kiválasztása</string>
   <string name="gpodnetauth_device_name">Eszköz neve</string>
-  <string name="gpodnetauth_device_name_default">AntennaPod ezen: %1$s</string>
+  <string name="gpodnetauth_device_name_default">ApexPod ezen: %1$s</string>
   <string name="gpodnetauth_existing_devices">Létező eszközök</string>
   <string name="gpodnetauth_create_device">Eszköz létrehozása</string>
-  <string name="gpodnetauth_finish_descr">Gratulálunk! A gpodder.net fiókja most már össze van kapcsolva az eszközével. Az AntennaPod automatikusan szinkronizálja az eszközén lévő feliratkozásait a gpodder.net fiókjával.</string>
+  <string name="gpodnetauth_finish_descr">Gratulálunk! A gpodder.net fiókja most már össze van kapcsolva az eszközével. Az ApexPod automatikusan szinkronizálja az eszközén lévő feliratkozásait a gpodder.net fiókjával.</string>
   <string name="gpodnetauth_finish_butsyncnow">Szinkronizálás indítása most</string>
   <string name="gpodnetsync_error_title">gpodder.net szinkronizálási hiba</string>
   <string name="gpodnetsync_error_descr">Hiba történt a szinkronizálás során:\u0020</string>
@@ -625,13 +625,13 @@
   <string name="gpodnetsync_username_characters_error">A felhasználónevek csak betűket, számokat, kötőjeleket és aláhúzásokat tartalmazhatnak.</string>
   <!--Directory chooser-->
   <string name="choose_data_directory">Válasszon adatmappát</string>
-  <string name="choose_data_directory_message">Válassza ki az adatmappája gyökerét. Az AntennaPod létre fogja hozni a megfelelő alkönyvtárakat.</string>
+  <string name="choose_data_directory_message">Válassza ki az adatmappája gyökerét. Az ApexPod létre fogja hozni a megfelelő alkönyvtárakat.</string>
   <string name="choose_data_directory_available_space">%1$s / %2$s szabad</string>
   <string name="pref_pausePlaybackForFocusLoss_sum">Lejátszás szüneteltetése a hangerő csökkentése helyett, ha egy másik alkalmazás akar hangot lejátszani</string>
   <string name="pref_pausePlaybackForFocusLoss_title">Megszakítások esetén szüneteltetés</string>
   <string name="pref_resumeAfterCall_sum">Lejátszás folytatása a telefonhívás befejeztekor</string>
   <string name="pref_resumeAfterCall_title">Folytatás hívás után</string>
-  <string name="pref_restart_required">A változás életbe lépéséhez az AntennaPod újraindítása szükséges.</string>
+  <string name="pref_restart_required">A változás életbe lépéséhez az ApexPod újraindítása szükséges.</string>
   <!--Online feed view-->
   <string name="subscribe_label">Feliratkozás</string>
   <string name="subscribing_label">Feliratkozás…</string>
@@ -666,12 +666,12 @@
   <string name="episode_filters_hint">Különálló szavak\n„Több szó”</string>
   <string name="keep_updated">Frissítse</string>
   <string name="keep_updated_summary">Vegye bele ezt a podcastot is az összes podcast (automatikus) frissítésébe</string>
-  <string name="auto_download_disabled_globally">Az automatikus letöltés ki van kapcsolva a fő AntennaPod beállításokban</string>
+  <string name="auto_download_disabled_globally">Az automatikus letöltés ki van kapcsolva a fő ApexPod beállításokban</string>
   <string name="statistics_listened_for">Ennyit hallgatta:</string>
   <string name="statistics_episodes_on_device">Epizódok az eszközön:</string>
   <string name="statistics_space_used">Használt tárhely: </string>
   <string name="statistics_view_all">Megtekintés az összes podcasthoz »</string>
-  <!--AntennaPodSP-->
+  <!--ApexPodSP-->
   <string name="sp_apps_importing_feeds_msg">Feliratkozások importálása az egycélú alkalmazásokból…</string>
   <!--Add podcast fragment-->
   <string name="search_podcast_hint">Podcast keresése…</string>
@@ -692,7 +692,7 @@
   <string name="local_folder">Helyi mappa</string>
   <string name="reconnect_local_folder">Helyi mappa újracsatlakoztatása</string>
   <string name="reconnect_local_folder_warning">Jogosultság-megtagadás esetén arra használhatja, hogy újracsatlakoztassa ugyanazt a mappát. Ne válasszon másik mappát.</string>
-  <string name="local_feed_description">Ez a virtuális podcast egy mappa AntennaPodhoz adásával készült.</string>
+  <string name="local_feed_description">Ez a virtuális podcast egy mappa ApexPodhoz adásával készült.</string>
   <string name="unable_to_start_system_file_manager">A rendszer fájlkezelője nem indítható el</string>
   <string name="filter">Szűrő</string>
   <string name="hide_is_favorite_label">Kedvenc</string>
@@ -721,8 +721,8 @@
   <string name="sort_short_long">Rövid \u2192 hosszú</string>
   <string name="sort_long_short">Hosszú \u2192 rövid</string>
   <!--Rating dialog-->
-  <string name="rating_title" tools:ignore="UnusedResources">Kedveli az AntennaPodot?</string>
-  <string name="rating_message" tools:ignore="UnusedResources">Értékelnénk, ha időt szánna az AntennaPod értékelésére.</string>
+  <string name="rating_title" tools:ignore="UnusedResources">Kedveli az ApexPodot?</string>
+  <string name="rating_message" tools:ignore="UnusedResources">Értékelnénk, ha időt szánna az ApexPod értékelésére.</string>
   <string name="rating_never_label" tools:ignore="UnusedResources">Hagyjon békén</string>
   <string name="rating_later_label" tools:ignore="UnusedResources">Emlékeztessen később</string>
   <string name="rating_now_label" tools:ignore="UnusedResources">Rendben, csináljuk!</string>
