--- a/core/src/main/res/values-pt/strings.xml
+++ b/core/src/main/res/values-pt/strings.xml
@@ -405,7 +405,7 @@
   <string name="pref_nav_drawer_feed_order_sum">Alterar a ordem das suas subscrições.</string>
   <string name="pref_nav_drawer_feed_counter_title">Definir contador de subscrições</string>
   <string name="pref_nav_drawer_feed_counter_sum">Alterar a informação mostrada no contador de subscrições. Também afeta as subscrições se \'Ordem de subscrição\' estiver definida como \'Contador\'.</string>
-  <string name="pref_set_theme_sum">Alterar a aparência do AntennaPod.</string>
+  <string name="pref_set_theme_sum">Alterar a aparência do ApexPod.</string>
   <string name="pref_automatic_download_title">Descarga automática</string>
   <string name="pref_automatic_download_sum">Configurar a descarga automática de episódios.</string>
   <string name="pref_autodl_wifi_filter_title">Ativar filtro Wi-Fi</string>
@@ -479,7 +479,7 @@
   <string name="pref_no_browser_found">Navegador web não encontrado</string>
   <string name="pref_cast_title">Suporte Chromecast</string>
   <string name="pref_cast_message_play_flavor">Ativar suporte a reprodução multimédia em dispositivos Cast (tais como Chromecast, Android TV...)</string>
-  <string name="pref_cast_message_free_flavor" tools:ignore="UnusedResources">Chromecast necessita de bibliotecas proprietárias de terceiros que estão desativadas nesta versão do AntennaPod.</string>
+  <string name="pref_cast_message_free_flavor" tools:ignore="UnusedResources">Chromecast necessita de bibliotecas proprietárias de terceiros que estão desativadas nesta versão do ApexPod.</string>
   <string name="pref_enqueue_downloaded_title">Colocar descargas na fila</string>
   <string name="pref_enqueue_downloaded_summary">Adicionar à fila os episódios descarregados.</string>
   <string name="media_player_builtin">Reprodutor nativo Android (descontinuado)</string>
@@ -519,15 +519,15 @@
   <string name="pref_contribute">Participar</string>
   <!--About screen-->
   <string name="about_pref">Acerca</string>
-  <string name="antennapod_version">Versão do AntennaPod</string>
+  <string name="antennapod_version">Versão do ApexPod</string>
   <string name="contributors">Contributos</string>
-  <string name="contributors_summary">Todos podem ajudar a melhorar o AntennaPod - com código, com traduções ou até mesmo auxiliando os utilizadores do nosso fórum</string>
+  <string name="contributors_summary">Todos podem ajudar a melhorar o ApexPod - com código, com traduções ou até mesmo auxiliando os utilizadores do nosso fórum</string>
   <string name="developers">Programadores</string>
   <string name="translators">Tradutores</string>
   <string name="special_thanks">Especial agradecimento</string>
   <string name="privacy_policy">Política de privacidade</string>
   <string name="licenses">Licenças</string>
-  <string name="licenses_summary">AntennaPod utiliza outro software grandioso</string>
+  <string name="licenses_summary">ApexPod utiliza outro software grandioso</string>
   <!--Search-->
   <string name="search_status_no_results">Nenhum resultado</string>
   <string name="type_to_search">Digite a consulta a efetuar</string>
@@ -549,8 +549,8 @@
   <string name="html_export_summary">Mostrar subscrições a um amigo</string>
   <string name="opml_export_summary">Transferir subscrições para outra aplicação de podcasts</string>
   <string name="opml_import_summary">Importar subscrições de outra aplicação de podcasts</string>
-  <string name="database_export_summary">Transferir subscrições, episódios e fila de reprodução do AntennaPod para outro dispositivo</string>
-  <string name="database_import_summary">Importar base de dados AntennaPod de outro dispositivo</string>
+  <string name="database_export_summary">Transferir subscrições, episódios e fila de reprodução do ApexPod para outro dispositivo</string>
+  <string name="database_import_summary">Importar base de dados ApexPod de outro dispositivo</string>
   <string name="opml_import_label">Importação OPML</string>
   <string name="opml_add_podcast_label">Importar lista de podcasts (OPML)</string>
   <string name="opml_reader_error">Ocorreu um erro ao ler o ficheiro OPML:</string>
@@ -570,7 +570,7 @@
   <string name="import_select_file">Selecione o ficheiro a importar</string>
   <string name="successful_import_label">Importação bem sucedida</string>
   <string name="import_ok">Prima OK para reiniciar a aplicação</string>
-  <string name="import_no_downgrade">A base de dados foi exportada de uma versão mais recente do AntennaPod. A sua versão da aplicação não sabe como manipular este ficheiro.</string>
+  <string name="import_no_downgrade">A base de dados foi exportada de uma versão mais recente do ApexPod. A sua versão da aplicação não sabe como manipular este ficheiro.</string>
   <string name="favorites_export_label">Exportação de favoritos</string>
   <string name="favorites_export_summary">Exportar favoritos para um ficheiro</string>
   <!--Sleep timer-->
@@ -607,13 +607,13 @@
   <string name="create_account">Criar conta</string>
   <string name="username_label">Utilizador</string>
   <string name="password_label">Palavra-passe</string>
-  <string name="gpodnet_description">Gpodder.net é um serviço \'open source\' para sincronização de podcasts, independente, e que não está relacionado com o projeto AntennaPod.</string>
+  <string name="gpodnet_description">Gpodder.net é um serviço \'open source\' para sincronização de podcasts, independente, e que não está relacionado com o projeto ApexPod.</string>
   <string name="gpodnetauth_server_official">Servidor oficial gpodder.net</string>
   <string name="gpodnetauth_server_custom">Servidor personalizado</string>
   <string name="gpodnetauth_host">Nome do servidor</string>
   <string name="gpodnetauth_select_server">Selecione o servidor</string>
   <string name="gpodnetauth_device_name">Nome do dispositivo</string>
-  <string name="gpodnetauth_device_name_default">AntennaPod em %1$s</string>
+  <string name="gpodnetauth_device_name_default">ApexPod em %1$s</string>
   <string name="gpodnetauth_existing_devices">Dispositivos existentes</string>
   <string name="gpodnetauth_create_device">Criar dispositivo</string>
   <string name="gpodnetauth_finish_descr">Parabéns! A sua conta gpodder.net está vinculada ao seu dispositivo. Agora, já pode sincronizar as subscrições no dispositivo com a sua conta gpodder.net.</string>
@@ -625,13 +625,13 @@
   <string name="gpodnetsync_username_characters_error">Apenas pode utilizar letras, dígitos, hífenes e sublinhados para o nome de utilizador.</string>
   <!--Directory chooser-->
   <string name="choose_data_directory">Escolha a pasta de dados</string>
-  <string name="choose_data_directory_message">Escolha a base da pasta de dados. O AntennaPod irá criar as subpastas apropriadas.</string>
+  <string name="choose_data_directory_message">Escolha a base da pasta de dados. O ApexPod irá criar as subpastas apropriadas.</string>
   <string name="choose_data_directory_available_space">%1$s de %2$s disponível</string>
   <string name="pref_pausePlaybackForFocusLoss_sum">Pausa na reprodução em vez de baixar o volume se outra aplicação quiser reproduzir sons.</string>
   <string name="pref_pausePlaybackForFocusLoss_title">Pausa nas interrupções</string>
   <string name="pref_resumeAfterCall_sum">Continuar reprodução ao terminar a chamada.</string>
   <string name="pref_resumeAfterCall_title">Continuar após a chamada</string>
-  <string name="pref_restart_required">Tem que reiniciar o AntennaPod para aplicar as alterações</string>
+  <string name="pref_restart_required">Tem que reiniciar o ApexPod para aplicar as alterações</string>
   <!--Online feed view-->
   <string name="subscribe_label">Subscrever</string>
   <string name="subscribing_label">Subscrição em curso...</string>
@@ -666,12 +666,12 @@
   <string name="episode_filters_hint">Uma palavra\n\"Várias palavras\"</string>
   <string name="keep_updated">Manter atualizada</string>
   <string name="keep_updated_summary">Incluir este podcast ao recarregar automaticamente todos os podcasts</string>
-  <string name="auto_download_disabled_globally">A descarga automática está desativada nas definições do AntennaPod</string>
+  <string name="auto_download_disabled_globally">A descarga automática está desativada nas definições do ApexPod</string>
   <string name="statistics_listened_for">Reproduzido durante:</string>
   <string name="statistics_episodes_on_device">Episódios no dispositivo:</string>
   <string name="statistics_space_used">Espaço utilizado:</string>
   <string name="statistics_view_all">Ver para todos os podcasts »</string>
-  <!--AntennaPodSP-->
+  <!--ApexPodSP-->
   <string name="sp_apps_importing_feeds_msg">Importar subscrições de aplicações single-purpose...</string>
   <!--Add podcast fragment-->
   <string name="search_podcast_hint">Pesquisar podcast...</string>
@@ -692,7 +692,7 @@
   <string name="local_folder">Pasta local</string>
   <string name="reconnect_local_folder">Restabelecer ligação a pasta local</string>
   <string name="reconnect_local_folder_warning">Em casos de recusa de permissões, pode utilizar isto para estabelecer uma nova ligação à mesma pasta. Não deve escolher outra pasta.</string>
-  <string name="local_feed_description">Este podcast virtual foi criado através da adição de uma pasta ao AntennaPod.</string>
+  <string name="local_feed_description">Este podcast virtual foi criado através da adição de uma pasta ao ApexPod.</string>
   <string name="unable_to_start_system_file_manager">Não foi possível iniciar o gestor de ficheiros</string>
   <string name="filter">Filtro</string>
   <string name="hide_is_favorite_label">É favorito</string>
@@ -721,8 +721,8 @@
   <string name="sort_short_long">Curto \u2192 Longo</string>
   <string name="sort_long_short">Longo \u2192 Curto</string>
   <!--Rating dialog-->
-  <string name="rating_title" tools:ignore="UnusedResources">Gosta do AntennaPod?</string>
-  <string name="rating_message" tools:ignore="UnusedResources">Gostaríamos que dispensasse algum tempo para avaliar o AntennaPod.</string>
+  <string name="rating_title" tools:ignore="UnusedResources">Gosta do ApexPod?</string>
+  <string name="rating_message" tools:ignore="UnusedResources">Gostaríamos que dispensasse algum tempo para avaliar o ApexPod.</string>
   <string name="rating_never_label" tools:ignore="UnusedResources">Não avaliar</string>
   <string name="rating_later_label" tools:ignore="UnusedResources">Lembrar mais tarde</string>
   <string name="rating_now_label" tools:ignore="UnusedResources">Claro, vamos a isso!</string>
