--- a/core/src/main/res/values-zh-rCN/strings.xml
+++ b/core/src/main/res/values-zh-rCN/strings.xml
@@ -270,7 +270,7 @@
   <string name="playback_error_unknown">未知错误</string>
   <string name="no_media_playing_label">没有可播放的媒体</string>
   <string name="player_go_to_picture_in_picture">画中画模式</string>
-  <string name="unknown_media_key">AntennaPod - 未知媒体密钥: %1$d</string>
+  <string name="unknown_media_key">ApexPod - 未知媒体密钥: %1$d</string>
   <string name="error_file_not_found">文件未找到</string>
   <string name="no_media_label">条目不包含一个媒体文件</string>
   <!--Queue operations-->
@@ -390,7 +390,7 @@
   <string name="pref_nav_drawer_feed_order_sum">改变你的订阅的排序方式</string>
   <string name="pref_nav_drawer_feed_counter_title">设定订阅数</string>
   <string name="pref_nav_drawer_feed_counter_sum">更改订阅计数器显示的信息。 如果“订阅的排序顺序”设置为“按数量排序”，这也会影响订阅的排序。</string>
-  <string name="pref_set_theme_sum">改变 AntennaPod 外观</string>
+  <string name="pref_set_theme_sum">改变 ApexPod 外观</string>
   <string name="pref_automatic_download_title">自动下载</string>
   <string name="pref_automatic_download_sum">配置自动下载的曲目</string>
   <string name="pref_autodl_wifi_filter_title">打开 Wi-Fi 过滤器</string>
@@ -465,7 +465,7 @@
   <string name="pref_no_browser_found">无网络浏览器</string>
   <string name="pref_cast_title">Chromecast 支持</string>
   <string name="pref_cast_message_play_flavor">启用投影设备（例如 Chromecast 、 Audio Speakers 和 Android TV ）上对于远端媒体回放的支持</string>
-  <string name="pref_cast_message_free_flavor" tools:ignore="UnusedResources">Chromecast 所需要的第三方库文件在这个版本的 AntennaPod 中被禁用</string>
+  <string name="pref_cast_message_free_flavor" tools:ignore="UnusedResources">Chromecast 所需要的第三方库文件在这个版本的 ApexPod 中被禁用</string>
   <string name="pref_enqueue_downloaded_title">已下载队列</string>
   <string name="pref_enqueue_downloaded_summary">向队列添加已下载的节目</string>
   <string name="media_player_builtin">内置安卓播放器 (已废弃)</string>
@@ -485,7 +485,7 @@
   <string name="back_button_open_drawer">打开导航抽屉</string>
   <string name="back_button_double_tap">双击退出</string>
   <string name="back_button_show_prompt">确认退出</string>
-  <string name="close_prompt">您确定想要关闭AntennaPod吗？</string>
+  <string name="close_prompt">您确定想要关闭ApexPod吗？</string>
   <string name="double_tap_toast">再次点按返回键以退出</string>
   <string name="back_button_go_to_page">前往页面</string>
   <string name="back_button_go_to_page_title">选择页面</string>
@@ -505,15 +505,15 @@
   <string name="pref_contribute">贡献</string>
   <!--About screen-->
   <string name="about_pref">关于</string>
-  <string name="antennapod_version">AntennaPod版本</string>
+  <string name="antennapod_version">ApexPod版本</string>
   <string name="contributors">贡献者</string>
-  <string name="contributors_summary">每个人都可以通过代码，翻译或通过帮助我们论坛中的用户来让AntennaPod变得更好</string>
+  <string name="contributors_summary">每个人都可以通过代码，翻译或通过帮助我们论坛中的用户来让ApexPod变得更好</string>
   <string name="developers">开发者</string>
   <string name="translators">译者</string>
   <string name="special_thanks">特别感谢</string>
   <string name="privacy_policy">隐私政策</string>
   <string name="licenses">许可证</string>
-  <string name="licenses_summary">AntennaPod使用其他伟大的软件</string>
+  <string name="licenses_summary">ApexPod使用其他伟大的软件</string>
   <!--Search-->
   <string name="search_status_no_results">没有找到任何结果</string>
   <string name="type_to_search">输入要搜索的查询</string>
@@ -535,8 +535,8 @@
   <string name="html_export_summary">向一位朋友展示您的订阅</string>
   <string name="opml_export_summary">将您的订阅转移到另一个播客应用 </string>
   <string name="opml_import_summary">从另一个播客应用导入您的订阅</string>
-  <string name="database_export_summary">将订阅，听过的剧集和队列转移到另一台设备上的AntennaPod</string>
-  <string name="database_import_summary">从另一台设备导入AntennaPod数据库 </string>
+  <string name="database_export_summary">将订阅，听过的剧集和队列转移到另一台设备上的ApexPod</string>
+  <string name="database_import_summary">从另一台设备导入ApexPod数据库 </string>
   <string name="opml_import_label">OPML 导入</string>
   <string name="opml_add_podcast_label">导入播客列表 (OPML)</string>
   <string name="opml_reader_error">读取 OPML 文档时发生错误</string>
@@ -555,8 +555,8 @@
   <string name="opml_import_ask_read_permission">读取 OPML 文件需要访问外部存储的权限</string>
   <string name="import_select_file">选择导入文件</string>
   <string name="successful_import_label">导入成功</string>
-  <string name="import_ok">请按\"确定\"重新启动AntennaPod</string>
-  <string name="import_no_downgrade">该数据库是使用较新版本的AntennaPod导出的。您当前安装的版本尚不知如何处理该文件。</string>
+  <string name="import_ok">请按\"确定\"重新启动ApexPod</string>
+  <string name="import_no_downgrade">该数据库是使用较新版本的ApexPod导出的。您当前安装的版本尚不知如何处理该文件。</string>
   <string name="favorites_export_label">收藏导出</string>
   <string name="favorites_export_summary">将保存的收藏夹导出到文件</string>
   <!--Sleep timer-->
@@ -596,10 +596,10 @@
   <string name="gpodnetauth_host">主机名</string>
   <string name="gpodnetauth_select_server">选择服务器</string>
   <string name="gpodnetauth_device_name">设备名</string>
-  <string name="gpodnetauth_device_name_default">AntennaPod 于 %1$s</string>
+  <string name="gpodnetauth_device_name_default">ApexPod 于 %1$s</string>
   <string name="gpodnetauth_existing_devices">现有设备</string>
   <string name="gpodnetauth_create_device">创建设备</string>
-  <string name="gpodnetauth_finish_descr">恭喜! 你的 gpodder.net 帐户与设备已连结完成.  现在开始 AntennaPod 将自动同步你 gpodder.net 帐户内的订阅信息到设备上.</string>
+  <string name="gpodnetauth_finish_descr">恭喜! 你的 gpodder.net 帐户与设备已连结完成.  现在开始 ApexPod 将自动同步你 gpodder.net 帐户内的订阅信息到设备上.</string>
   <string name="gpodnetauth_finish_butsyncnow">开始同步</string>
   <string name="gpodnetsync_error_title">gpodder.net 同步错误</string>
   <string name="gpodnetsync_error_descr">同步过程中发生错误: \u0020</string>
@@ -608,13 +608,13 @@
   <string name="gpodnetsync_username_characters_error">用户名只能包含字母、数字、连字符和下划线</string>
   <!--Directory chooser-->
   <string name="choose_data_directory">选择数据文件夹</string>
-  <string name="choose_data_directory_message">请选择用于 AntennaPod 的数据根目录， AntennaPod 将会创建合适的子目录。</string>
+  <string name="choose_data_directory_message">请选择用于 ApexPod 的数据根目录， ApexPod 将会创建合适的子目录。</string>
   <string name="choose_data_directory_available_space">%2$s中%1$s可用</string>
   <string name="pref_pausePlaybackForFocusLoss_sum">当另一个应用程序要播放声音时暂停播放, 而不是降低音量</string>
   <string name="pref_pausePlaybackForFocusLoss_title">中断暂停</string>
   <string name="pref_resumeAfterCall_sum">通话结束后恢复播放</string>
   <string name="pref_resumeAfterCall_title">通话后恢复</string>
-  <string name="pref_restart_required">需要重启 AntennaPod 使改变生效。</string>
+  <string name="pref_restart_required">需要重启 ApexPod 使改变生效。</string>
   <!--Online feed view-->
   <string name="subscribe_label">订阅</string>
   <string name="subscribing_label">订阅中...</string>
@@ -649,12 +649,12 @@
   <string name="episode_filters_hint">单个单词  \n“多个单词”</string>
   <string name="keep_updated">保持最新</string>
   <string name="keep_updated_summary">（自动）刷新所有播客时包括此播客 </string>
-  <string name="auto_download_disabled_globally">AntennaPod主设置中已禁用自动下载</string>
+  <string name="auto_download_disabled_globally">ApexPod主设置中已禁用自动下载</string>
   <string name="statistics_listened_for">已听了:</string>
   <string name="statistics_episodes_on_device">设备上的节目:</string>
   <string name="statistics_space_used">占用的空间: </string>
   <string name="statistics_view_all">所有播客视图 »</string>
-  <!--AntennaPodSP-->
+  <!--ApexPodSP-->
   <string name="sp_apps_importing_feeds_msg">正在从选定的应用中导入订阅...</string>
   <!--Add podcast fragment-->
   <string name="search_podcast_hint">搜索播客……</string>
@@ -675,7 +675,7 @@
   <string name="local_folder">本地文件夹</string>
   <string name="reconnect_local_folder">重新连接本地文件夹</string>
   <string name="reconnect_local_folder_warning">在权限遭拒的情况下，您可以使用它重新连接到完全相同的文件夹。不要选择其他文件夹。</string>
-  <string name="local_feed_description">这个虚拟播客是通过向AntennaPod添加一个文件夹创建的</string>
+  <string name="local_feed_description">这个虚拟播客是通过向ApexPod添加一个文件夹创建的</string>
   <string name="unable_to_start_system_file_manager">无法启动系统文件管理器</string>
   <string name="filter">过滤器</string>
   <string name="hide_is_favorite_label">喜爱的</string>
@@ -704,8 +704,8 @@
   <string name="sort_short_long">短\u2192长</string>
   <string name="sort_long_short">长\u2192短</string>
   <!--Rating dialog-->
-  <string name="rating_title" tools:ignore="UnusedResources">喜欢 AntennaPod?</string>
-  <string name="rating_message" tools:ignore="UnusedResources">如您能在百忙之外抽时间评价一下AntennaPod，我们感激不尽.</string>
+  <string name="rating_title" tools:ignore="UnusedResources">喜欢 ApexPod?</string>
+  <string name="rating_message" tools:ignore="UnusedResources">如您能在百忙之外抽时间评价一下ApexPod，我们感激不尽.</string>
   <string name="rating_never_label" tools:ignore="UnusedResources">请勿打扰</string>
   <string name="rating_later_label" tools:ignore="UnusedResources">稍后提醒</string>
   <string name="rating_now_label" tools:ignore="UnusedResources">好的, 就这样！</string>
