--- a/core/src/main/res/values-zh-rTW/strings.xml
+++ b/core/src/main/res/values-zh-rTW/strings.xml
@@ -232,7 +232,7 @@
   <string name="playback_error_unknown">不明錯誤</string>
   <string name="no_media_playing_label">播放完畢</string>
   <string name="player_go_to_picture_in_picture">子母畫面模式</string>
-  <string name="unknown_media_key">AntennaPod - 媒體按鍵無法辨識：%1$d</string>
+  <string name="unknown_media_key">ApexPod - 媒體按鍵無法辨識：%1$d</string>
   <string name="error_file_not_found">找不到檔案</string>
   <!--Queue operations-->
   <string name="lock_queue">鎖定待播清單</string>
@@ -341,7 +341,7 @@
   <string name="pref_nav_drawer_feed_order_sum">更改您訂閱頻道的排序方式</string>
   <string name="pref_nav_drawer_feed_counter_title">設定訂閱計數器</string>
   <string name="pref_nav_drawer_feed_counter_sum">調整訂閱計數器中要顯示的東西，同時也會在排序方式設定為「計數」時影響排序</string>
-  <string name="pref_set_theme_sum">更改 AntennaPod 的外觀</string>
+  <string name="pref_set_theme_sum">更改 ApexPod 的外觀</string>
   <string name="pref_automatic_download_title">自動下載</string>
   <string name="pref_automatic_download_sum">設定單集自動下載機制</string>
   <string name="pref_autodl_wifi_filter_title">限定 Wi-Fi</string>
@@ -415,7 +415,7 @@
   <string name="pref_no_browser_found">找不到任何瀏覽器</string>
   <string name="pref_cast_title">支援 Chromecast</string>
   <string name="pref_cast_message_play_flavor">啟用 Cast 設備（如 Chromecast、Audio Speakers、Google TV 等）遙控播放</string>
-  <string name="pref_cast_message_free_flavor" tools:ignore="UnusedResources">Chromecast 相關支援需要其他第三方的私權軟體，所以在此版 AntennaPod 中停用。</string>
+  <string name="pref_cast_message_free_flavor" tools:ignore="UnusedResources">Chromecast 相關支援需要其他第三方的私權軟體，所以在此版 ApexPod 中停用。</string>
   <string name="pref_enqueue_downloaded_title">下載後加入待播清單</string>
   <string name="pref_enqueue_downloaded_summary">下載單集以後自動加入待播清單</string>
   <string name="media_player_builtin">內建 Android 播放器 (已棄用)</string>
@@ -435,7 +435,7 @@
   <string name="back_button_open_drawer">開啟側邊選單</string>
   <string name="back_button_double_tap">按兩下後離開 App</string>
   <string name="back_button_show_prompt">離開前需要確認</string>
-  <string name="close_prompt">確定關閉 AntennaPod？</string>
+  <string name="close_prompt">確定關閉 ApexPod？</string>
   <string name="double_tap_toast">重按返回鍵以離開</string>
   <string name="back_button_go_to_page">前往頁面…</string>
   <string name="back_button_go_to_page_title">選擇頁面</string>
@@ -451,15 +451,15 @@
   <string name="not_kept_updated">未設定維持更新</string>
   <!--About screen-->
   <string name="about_pref">關於</string>
-  <string name="antennapod_version">AntennaPod 版本</string>
+  <string name="antennapod_version">ApexPod 版本</string>
   <string name="contributors">貢獻者</string>
-  <string name="contributors_summary">無論寫程式、翻譯或幫助其他使用者，每個人都能讓 AntennaPod 更加完美！</string>
+  <string name="contributors_summary">無論寫程式、翻譯或幫助其他使用者，每個人都能讓 ApexPod 更加完美！</string>
   <string name="developers">開發人員</string>
   <string name="translators">譯者</string>
   <string name="special_thanks">特別感謝</string>
   <string name="privacy_policy">隱私條款</string>
   <string name="licenses">授權條款</string>
-  <string name="licenses_summary">AntennaPod 中也用了其他很棒的軟體</string>
+  <string name="licenses_summary">ApexPod 中也用了其他很棒的軟體</string>
   <!--Search-->
   <string name="search_status_no_results">搜尋無結果</string>
   <string name="search_label">搜尋</string>
@@ -480,8 +480,8 @@
   <string name="html_export_summary">顯示您的訂閱給朋友</string>
   <string name="opml_export_summary">將您的訂閱清單移到另一個 Podcast 軟體</string>
   <string name="opml_import_summary">從其他 Podcast 軟體匯入訂閱清單</string>
-  <string name="database_export_summary">將訂閱、聆聽紀錄、待播清單等資訊傳送到其他設備上的 AntennaPod</string>
-  <string name="database_import_summary">自其他設備匯入 AntennaPod 資料庫</string>
+  <string name="database_export_summary">將訂閱、聆聽紀錄、待播清單等資訊傳送到其他設備上的 ApexPod</string>
+  <string name="database_import_summary">自其他設備匯入 ApexPod 資料庫</string>
   <string name="opml_import_label">OPML 匯入</string>
   <string name="opml_add_podcast_label">自 OPML 匯入 Podcast 清單</string>
   <string name="opml_reader_error">讀取 OPML 時發生錯誤：</string>
@@ -500,8 +500,8 @@
   <string name="opml_import_ask_read_permission">讀取 OPML 檔需要存取外部儲存空間的權限</string>
   <string name="import_select_file">選取要匯入的檔案</string>
   <string name="successful_import_label">匯入完畢</string>
-  <string name="import_ok">請按下 OK 重新啟動 AntennaPod</string>
-  <string name="import_no_downgrade">此資料庫是以新版 AntennaPod 匯出的，您目前使用的版本無法使用這份資料。</string>
+  <string name="import_ok">請按下 OK 重新啟動 ApexPod</string>
+  <string name="import_no_downgrade">此資料庫是以新版 ApexPod 匯出的，您目前使用的版本無法使用這份資料。</string>
   <string name="favorites_export_label">匯出我的最愛</string>
   <string name="favorites_export_summary">將儲存的我的最愛清單匯出為檔案</string>
   <!--Sleep timer-->
@@ -535,7 +535,7 @@
   <string name="create_account">建立帳號</string>
   <string name="username_label">帳號</string>
   <string name="password_label">密碼</string>
-  <string name="gpodnet_description">Gpodder.net 是開放源碼的 Podcast 同步服務，並非 AntennaPod 專案的一部分。</string>
+  <string name="gpodnet_description">Gpodder.net 是開放源碼的 Podcast 同步服務，並非 ApexPod 專案的一部分。</string>
   <string name="gpodnetauth_server_official">gpodder.net 官方主機</string>
   <string name="gpodnetauth_server_custom">自訂主機</string>
   <string name="gpodnetauth_host">主機名稱</string>
@@ -543,7 +543,7 @@
   <string name="gpodnetauth_device_name">裝置名稱</string>
   <string name="gpodnetauth_existing_devices">現存裝置</string>
   <string name="gpodnetauth_create_device">新增裝置</string>
-  <string name="gpodnetauth_finish_descr">恭喜，您的 gpodder.net 帳號已經成功連結到當前的設備！AntennaPod 今後將自動與 gpodder.net 同步此設備的訂閱清單。</string>
+  <string name="gpodnetauth_finish_descr">恭喜，您的 gpodder.net 帳號已經成功連結到當前的設備！ApexPod 今後將自動與 gpodder.net 同步此設備的訂閱清單。</string>
   <string name="gpodnetauth_finish_butsyncnow">現在開始同步</string>
   <string name="gpodnetsync_error_title">gpodder.net 同步錯誤</string>
   <string name="gpodnetsync_error_descr">更新時發生錯誤：\u0020</string>
@@ -552,13 +552,13 @@
   <string name="gpodnetsync_username_characters_error">帳號中只能包含英文字母、數字、橫線及底線</string>
   <!--Directory chooser-->
   <string name="choose_data_directory">選擇儲存資料夾</string>
-  <string name="choose_data_directory_message">請選擇您儲存檔案用的資料夾，AntennaPod 會自動建立相應的子資料夾。</string>
+  <string name="choose_data_directory_message">請選擇您儲存檔案用的資料夾，ApexPod 會自動建立相應的子資料夾。</string>
   <string name="choose_data_directory_available_space">可用空間 %1$s/%2$s</string>
   <string name="pref_pausePlaybackForFocusLoss_sum">有其他 App 也要播放聲音時，停止播放 Podcast（而非降低音量）</string>
   <string name="pref_pausePlaybackForFocusLoss_title">其他音訊介入時暫停播放</string>
   <string name="pref_resumeAfterCall_sum">通話結束後，繼續播放 Podcast</string>
   <string name="pref_resumeAfterCall_title">通話後繼續播放</string>
-  <string name="pref_restart_required">此更動需要重新啟動 AntennaPod。</string>
+  <string name="pref_restart_required">此更動需要重新啟動 ApexPod。</string>
   <!--Online feed view-->
   <string name="subscribe_label">訂閱</string>
   <string name="subscribing_label">訂閱中</string>
@@ -588,13 +588,13 @@
   <string name="episode_filters_hint">Single words \n\"Multiple Words\"</string>
   <string name="keep_updated">維持更新</string>
   <string name="keep_updated_summary">自動更新所有 Podcast 時，也包括此 Podcast</string>
-  <string name="auto_download_disabled_globally">AntennaPod 的主設定中已停用自動下載功能</string>
+  <string name="auto_download_disabled_globally">ApexPod 的主設定中已停用自動下載功能</string>
   <string name="statistics_listened_for">聆聽時間：</string>
   <string name="statistics_episodes_on_device">裝置上的單集：</string>
   <string name="statistics_space_used">佔用空間：</string>
   <string name="statistics_view_all">檢視所有 Podcast »</string>
-  <!--AntennaPodSP-->
-  <string name="sp_apps_importing_feeds_msg">從 AntennaPodSP 匯入訂閱清單</string>
+  <!--ApexPodSP-->
+  <string name="sp_apps_importing_feeds_msg">從 ApexPodSP 匯入訂閱清單</string>
   <!--Add podcast fragment-->
   <string name="search_podcast_hint">搜尋 Podcast…</string>
   <string name="search_itunes_label">搜尋 iTunes</string>
@@ -614,7 +614,7 @@
   <string name="local_folder">本機資料夾</string>
   <string name="reconnect_local_folder">重新連接本機資料夾</string>
   <string name="reconnect_local_folder_warning">若因權限問題被拒絕連接，您可以用此方法重新連上同一個資料夾。此時請勿選擇其他的資料夾。</string>
-  <string name="local_feed_description">此虛擬 Podcast 是在 AntennaPod 裡增加資料夾而產生的。</string>
+  <string name="local_feed_description">此虛擬 Podcast 是在 ApexPod 裡增加資料夾而產生的。</string>
   <string name="unable_to_start_system_file_manager">無法啟用系統的檔案管理工具</string>
   <string name="filter">篩選</string>
   <string name="hide_is_favorite_label">為最愛</string>
@@ -643,8 +643,8 @@
   <string name="sort_short_long">短 \u2192 長</string>
   <string name="sort_long_short">長 \u2192 短</string>
   <!--Rating dialog-->
-  <string name="rating_title" tools:ignore="UnusedResources">喜歡 AntennaPod 嗎？</string>
-  <string name="rating_message" tools:ignore="UnusedResources">如果您能花點時間為 AntennaPod 評個分，就太感謝啦！</string>
+  <string name="rating_title" tools:ignore="UnusedResources">喜歡 ApexPod 嗎？</string>
+  <string name="rating_message" tools:ignore="UnusedResources">如果您能花點時間為 ApexPod 評個分，就太感謝啦！</string>
   <string name="rating_never_label" tools:ignore="UnusedResources">別吵我</string>
   <string name="rating_later_label" tools:ignore="UnusedResources">以後再說</string>
   <string name="rating_now_label" tools:ignore="UnusedResources">好啊，這就去！</string>
